--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Stoffberg/cosmosql.git"
+		"url": "git+https://github.com/Stoffberg/cosmosql.git"
 	},
 	"bugs": {
 		"url": "https://github.com/Stoffberg/cosmosql/issues"
