Fix auth token format and add cross-partition query support
- Fix auth token generation: use 2 trailing newlines instead of 3 (Azure format)
- Add enableCrossPartitionQuery support to CosmosClient.request()
- Add x-ms-documentdb-query-enablecrosspartition header when enabled
- Update findMany to pass enableCrossPartitionQuery parameter
- Add comprehensive tests to prevent regressions

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 		"lint": "eslint src --ext .ts",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"prepublishOnly": "npm run build && npm test",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit",
+		"deploy:patch": "npm version patch && npm publish",
+		"deploy:minor": "npm version minor && npm publish",
+		"deploy:major": "npm version major && npm publish"
 	},
 	"keywords": [
 		"cosmosdb",
