--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,29 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.2/schema.json",
+	"files": {
+		"ignoreUnknown": false,
+		"includes": ["src/**/*.ts", "tests/**/*.ts", "integration-tests.ts"]
+	},
 	"linter": {
 		"enabled": true,
 		"rules": {
 			"suspicious": {
 				"noExplicitAny": "off"
+			},
+			"style": {
+				"noNonNullAssertion": "off"
 			}
+		}
+	},
+	"formatter": {
+		"enabled": true,
+		"indentStyle": "tab",
+		"lineWidth": 100
+	},
+	"javascript": {
+		"formatter": {
+			"quoteStyle": "double",
+			"trailingCommas": "all"
 		}
 	}
 }
