--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
 	],
 	"scripts": {
 		"build": "tsc -p tsconfig.build.json",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:coverage": "jest --coverage",
-		"lint": "eslint src --ext .ts",
-		"format": "prettier --write \"src/**/*.ts\"",
-		"prepublishOnly": "npm run build && npm test",
+		"test": "jest && npm run test:integration",
+		"test:unit": "jest --testPathIgnorePatterns=integration",
+		"test:integration": "tsx integration-tests.ts",
+		"lint": "biome lint src",
+		"format": "biome format src --write",
+		"prepublishOnly": "npm run build && npm run test && npm run type-check && npm run lint && npm run format",
 		"type-check": "tsc --noEmit",
 		"deploy:patch": "npm version patch && npm publish",
 		"deploy:minor": "npm version minor && npm publish",
@@ -46,16 +46,15 @@
 		"@types/node": "^20.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"dotenv": "^17.2.3",
 		"eslint": "^8.50.0",
 		"jest": "^29.7.0",
 		"prettier": "^3.0.0",
 		"ts-jest": "^29.1.0",
-		"typescript": "^5.2.0"
+		"typescript": "^5.2.0",
+		"@azure/cosmos": "^4.7.0"
 	},
 	"engines": {
 		"node": ">=18.0.0"
-	},
-	"dependencies": {
-		"undici": "^7.16.0"
 	}
 }
