--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"homepage": "https://cosmosql.dev",
 	"devDependencies": {
+		"@azure/cosmos": "^4.7.0",
 		"@types/jest": "^29.5.0",
 		"@types/node": "^20.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -51,8 +52,8 @@
 		"jest": "^29.7.0",
 		"prettier": "^3.0.0",
 		"ts-jest": "^29.1.0",
-		"typescript": "^5.2.0",
-		"@azure/cosmos": "^4.7.0"
+		"tsx": "^4.20.6",
+		"typescript": "^5.2.0"
 	},
 	"engines": {
 		"node": ">=18.0.0"
