--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
 	"$schema": "https://biomejs.dev/schemas/2.3.2/schema.json",
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["src/**/*.ts", "tests/**/*.ts", "integration-tests.ts"]
+		"includes": ["src/**/*.ts", "tests/**/*.ts"]
 	},
 	"linter": {
 		"enabled": true,
