--- a/package.json
+++ b/package.json
@@ -1,61 +1,67 @@
 {
-	"name": "cosmosql",
-	"version": "0.5.0",
-	"description": "Type-safe, minimal ORM for Azure CosmosDB",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": [
-		"dist",
-		"README.md",
-		"LICENSE"
-	],
-	"scripts": {
-		"build": "tsc -p tsconfig.build.json",
-		"test": "jest && npm run test:integration",
-		"test:unit": "jest --testPathIgnorePatterns=integration",
-		"test:integration": "tsx integration-tests.ts",
-		"lint": "biome lint src",
-		"format": "biome format src --write",
-		"prepublishOnly": "npm run build && npm run test && npm run type-check && npm run lint && npm run format",
-		"type-check": "tsc --noEmit",
-		"deploy:patch": "npm version patch && npm publish",
-		"deploy:minor": "npm version minor && npm publish",
-		"deploy:major": "npm version major && npm publish"
-	},
-	"keywords": [
-		"cosmosdb",
-		"azure",
-		"orm",
-		"typescript",
-		"type-safe",
-		"database",
-		"nosql"
-	],
-	"author": "Dirk Beukes",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Stoffberg/cosmosql.git"
-	},
-	"bugs": {
-		"url": "https://github.com/Stoffberg/cosmosql/issues"
-	},
-	"homepage": "https://cosmosql.dev",
-	"devDependencies": {
-		"@azure/cosmos": "^4.7.0",
-		"@types/jest": "^29.5.0",
-		"@types/node": "^20.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"dotenv": "^17.2.3",
-		"eslint": "^8.50.0",
-		"jest": "^29.7.0",
-		"prettier": "^3.0.0",
-		"ts-jest": "^29.1.0",
-		"tsx": "^4.20.6",
-		"typescript": "^5.2.0"
-	},
-	"engines": {
-		"node": ">=18.0.0"
-	}
+  "name": "cosmosql",
+  "version": "0.5.0",
+  "description": "Type-safe, minimal ORM for Azure CosmosDB",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json && bun run scripts/minify.ts",
+    "test": "bun test && bun run test:integration",
+    "test:unit": "bun test tests/unit",
+    "test:integration": "bun test tests/integration",
+    "test:integration:parallel": "bun test tests/integration --parallel",
+    "test:integration:basic-crud": "bun test tests/integration/basic-crud.test.ts",
+    "test:integration:query-ops": "bun test tests/integration/query-operations.test.ts",
+    "test:integration:container-mgmt": "bun test tests/integration/container-management.test.ts",
+    "test:integration:edge-cases": "bun test tests/integration/edge-cases.test.ts",
+    "lint": "biome lint src",
+    "format": "biome format src --write",
+    "prepublishOnly": "bun run build && bun run test && bun run type-check && bun run lint && bun run format",
+    "type-check": "tsc --noEmit",
+    "deploy:patch": "bun run prepublishOnly && bun x npm version patch && npm publish",
+    "deploy:minor": "bun run prepublishOnly && bun x npm version minor && npm publish",
+    "deploy:major": "bun run prepublishOnly && bun x npm version major && npm publish"
+  },
+  "keywords": [
+    "cosmosdb",
+    "azure",
+    "orm",
+    "typescript",
+    "type-safe",
+    "database",
+    "nosql"
+  ],
+  "author": "Dirk Beukes",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Stoffberg/cosmosql.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Stoffberg/cosmosql/issues"
+  },
+  "homepage": "https://cosmosql.dev",
+  "devDependencies": {
+    "@azure/cosmos": "^4.7.0",
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "esbuild": "^0.19.0",
+    "eslint": "^8.50.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.2.0",
+    "@types/bun": "latest"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "bun": ">=1.0.0"
+  },
+  "packageManager": "bun@1.0.0",
+  "private": true
 }
