--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,5 +1,3 @@
 [test]
-# Preload setup file before running tests
-# This runs before all test files to set up global mocks and environment
-preload = ["./tests/setup.ts"]
+# Bun automatically loads .env files
 
